Restructure atoms, rename filecalls and edit grunt js

--- a/scss/atoms/_globals.scss
+++ b/scss/atoms/_globals.scss
@@ -1,6 +1,7 @@
-@import "atoms/animations/animations";
-@import "atoms/colors/colors";
+@import "atoms/reset";
+@import "atoms/animations";
+@import "atoms/colors";
+@import "atoms/type";
 @import "atoms/helpers/mixins";
+@import "atoms/helpers/breakpoints";
 @import "atoms/helpers/functions";
-@import "atoms/helpers/utilities";
-@import "atoms/type/type";
