--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,6 @@
 // Import atoms
 
-@import "atoms/reset/reset";
-@import "atoms/grids/grids";
-@import "atoms/type/type";
-@import "atoms/colors/colors";
-@import "atoms/animations/animations";
-@import "atoms/helpers/breakpoints";
-@import "atoms/helpers/mixins";
-@import "atoms/helpers/functions";
+@import "atoms/grids";
 @import "atoms/helpers/utilities";
 
 // Import Molecules
@@ -46,13 +39,12 @@
 @import "organisms/cards/cards";
 @import "organisms/popover/popover";
 @import "organisms/media-object/media-object";
-@import "organisms/organisms";
 
 // Import Templates
 
 @import "templates/header/header";
 @import "templates/footer/footer";
-@import "templates/navigation/navbar";
+@import "templates/navbar/navbar";
 @import "templates/article/article";
 @import "templates/sidenav/sidenav";
 @import "templates/search/search";
