Set color variables based on flat UI colors

--- a/scss/atoms/_colors.scss
+++ b/scss/atoms/_colors.scss
@@ -1,1 +1,65 @@
+$white: #fff;
+$black: #000;
+$grey: #666, #888, #aaa, #ddd, #eee;
 
+//http://flatuicolors.com/
+
+// Green dark
+$turquoise: #1abc9c;
+$emerald: #2ecc71;
+
+$green-dark: $turquoise, $emerald;
+
+//Green light
+$green-sea: #16a085;
+$nephritis: #27ae60;
+
+$green-light: $green-sea, $nephritis;
+
+//Blue
+$peter-river: #3498db;
+$belize-hole: #2980b9;
+
+$blue: $peter-river, $belize-hole;
+
+//Purple
+$amethyst: #2980b9;
+$wisteria: #8e44ad;
+
+$purple: $amethyst, $wisteria;
+
+//Dark grey
+$wet-asphalt: #34495e;
+$midnight-blue: #2c3e50;
+
+$grey-dark: $wet-asphalt, $midnight-blue;
+
+//Yellow
+$sun-flower: #f1c40f;
+$orange: #f39c12;
+
+$yellow: $sun-flower, $orange;
+
+//Orange
+$carrot: #e67e22;
+$pumpkin: #d35400;
+
+$orange: $carrot, $pumpkin;
+
+//Red
+$alizarin: #e74c3c;
+$pomogranate: #c0392b;
+
+$red: $alizarin, $pomogranate;
+
+// Silver
+$clouds: #ecf0f1;
+$silverine: #bdc3c7;
+
+$silver: $clouds, $silverine;
+
+// Light grey
+$concrete: #95a5a6;
+$asbestos: #7f8c8d;
+
+$grey-light: $concrete, $asbestos;
