Work on links, body copy and type

--- a/scss/atoms/_type.scss
+++ b/scss/atoms/_type.scss
@@ -1,1 +1,21 @@
+////////////////
+// Font families
+////////////////
+$open-sans: "Open sans", sans-serif;
 
+////////////////
+// Font Size variations
+////////////////
+
+$base-font-size: 0.75em;
+$heading-font-size: 3.998em, 2.827em, 1.999em, 1.414em;
+$small-font-size: 0.707em;
+
+////////////////
+// Font Weight variations
+////////////////
+
+$base-font-weight: 400;
+$light-font-weight: 300;
+$emphasis-font-weight: 600;
+$heading-font-weight: 700;
