--- a/scss/atoms/_globals.scss
+++ b/scss/atoms/_globals.scss
@@ -1,6 +1,6 @@
-@import "atoms/animations";
 @import "atoms/colors";
 @import "atoms/type";
 @import "atoms/helpers/mixins";
 @import "atoms/helpers/breakpoints";
 @import "atoms/helpers/functions";
+@import "atoms/helpers/utilities";
