--- a/scss/molecules/dropdowns/_dropdowns.scss
+++ b/scss/molecules/dropdowns/_dropdowns.scss
@@ -1,1 +1,34 @@
 @import "extends";
+
+/*doc
+#Dropdowns
+--------------------
+We use bootstrap dropdowns for this
+
+```
+<div class="dropdown">
+  <a data-toggle="dropdown" href="#"><i class="fa fa-cog"></i> <b class="caret"></b></a>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    <li role="presentation">
+      <a role="menuitem" tabindex="-1" href="#"><i class="fa fa-tachometer"></i> Dashboard</a>
+    </li>
+    <li role="presentation">
+          <a role="menuitem" tabindex="-1" href="#"><i class="fa fa-cog"></i> Settings</a>
+    </li>
+    <li role="presentation">
+          <a role="menuitem" tabindex="-1" href="#">Link one</a>
+    </li>
+    <li role="presentation" class="divider"></li>
+    <li role="presentation">
+          <a role="menuitem" tabindex="-1" href="#">Link one</a>
+    </li>
+  </ul>
+</div>
+```
+*/
+
+.dropdown-menu {
+  border-radius: 0;
+}
+
+
