--- a/scss/molecules/headings/_headings.scss
+++ b/scss/molecules/headings/_headings.scss
@@ -47,6 +47,10 @@ h1, h2, h3, h4 {
   line-height: 1.2;
 }
 
+.no-top {
+  @include no-margin(top);
+}
+
 h1, .h1 {
   margin-top: 0;
   font-size: nth($heading-sizes, 1);
