--- a/scss/organisms/alerts/_alerts.scss
+++ b/scss/organisms/alerts/_alerts.scss
@@ -1,1 +1,96 @@
+/*doc
+
+#Alerts
+------------
+
+Alert can be used to display information. It may or may not be dismissable.
+
+```
+<div class="alert alert-primary">
+  <p class="no-top">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, similique.</p>
+  <div class="close large">&times;</div>
+</div>
+
+<div class="alert alert-secondary">
+  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, molestiae. </p>
+  <div class="close large">&times;</div>
+</div>
+
+<div class="alert alert-warning">
+  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore.</p>
+  <div class="close large">&times;</div>
+</div>
+
+<div class="alert alert-success">
+  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore.</p>
+  <div class="close large">&times;</div>
+</div>
+
+<div class="alert alert-alert">
+  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore.</p>
+  <div class="close large">&times;</div>
+</div>
+
+<div class="alert alert-info">
+  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, dolore.</p>
+  <div class="close large">&times;</div>
+</div>
+```
+
+*/
+
+
+.close {
+  position: absolute;
+  display: inline-block;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  padding-left: 10px;
+  padding-right: 10px;
+  &.large {
+    font-size: 2em;
+    font-weight: bold;
+  }
+  &:hover {
+    background: rgba(black, 0.1);
+  }
+}
+
+.alert {
+  position: relative;
+  padding: 1em;
+  border-radius: $global-radius;
+  margin-bottom: 1em;
+}
+
+.alert-primary {
+  @include paint(background, lighten(nth($grey-dark, 2), 10%));
+  color: white;
+}
+
+.alert-secondary {
+  @include paint(background, lighten(nth($grey-light, 2), 10%));
+}
+
+.alert-alert {
+  @include paint(background, lighten(nth($red, 2), 10%));
+}
+
+.alert-warning {
+  @include paint(background, lighten(nth($yellow, 2), 10%));
+}
+
+.alert-info {
+  @include paint(background, lighten($brand-info, 10%));
+}
+
+.alert-success {
+  @include paint(background, lighten($brand-success, 10%));
+}
 
