--- a/scss/organisms/alerts/_alerts.scss
+++ b/scss/organisms/alerts/_alerts.scss
@@ -7,14 +7,12 @@ Alert can be used to display information. It may or may not be dismissable.
 
 ```
 <div class="alert alert-primary alert-dismissable">
-  <p class="no-top">Lorem ipsum dolor sit amet, a<a href="#">consectetur adipisicing elit</a>. Cumque, similique.</p>
+  <p class="no-top no-bottom">Single line dismissable alert with link. Lorem ipsum dolor sit amet, a<a href="#">consectetur adipisicing elit</a>. Cumque, similique.</p>
   <button class="close large" data-dismiss="alert">&times;</button>
 </div>
 
 <div class="alert alert-secondary alert-dismissable">
-  <h4 class="no-top"><i class="fa fa-exclamation-triangle"></i> I don't think it means what you think it means</h4>
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, molestiae. </p>
-  <button class="close large" data-dismiss="alert">&times;</button>
+  <p class="no-top no-bottom"> Plain text with no dismiss. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, molestiae. </p>
 </div>
 
 <div class="alert alert-warning alert-dismissable">
