--- a/scss/molecules/buttons/_extends.scss
+++ b/scss/molecules/buttons/_extends.scss
@@ -1,1 +1,107 @@
 @import "mixins";
+
+/*doc
+
+#Buttons
+---------------
+
+We have 5 variations of buttons
+
+  ```
+    <div class="inline-btn">
+      <a class="btn btn-primary" href="#">Button</a>
+      <a class="btn btn-secondary" href="#">Button</a>
+      <a class="btn btn-alert" href="#">Button</a>
+      <a class="btn btn-info" href="#">Button</a>
+      <a class="btn btn-success" href="#">Button</a>
+      <a class="btn btn-warning" href="#">Button</a>
+    </div>
+  ```
+
+*/
+
+/*doc
+  Buttons can be used with any tag `<button>`, `<a>` or `<input>`
+  ```
+    <a class="btn btn-primary" href="#">Link Button</a>
+    <button class="btn btn-primary" href="#">Button Button</button>
+    <input type="submit" class="btn btn-primary" href="#" value="Input Button">
+  ```
+*/
+
+/*doc
+
+Small Buttons
+```
+<a class="btn btn-primary btn-small" href="#">Small Button</a>
+```
+*/
+
+/*doc
+
+Medium Buttons
+```
+<a class="btn btn-primary btn-medium" href="#">Medium Button</a>
+```
+*/
+
+/*doc
+Large Buttons
+```
+<a class="btn btn-primary btn-large" href="#">Large Button</a>
+```
+*/
+
+/*doc
+Expand buttons
+```
+  <a class="btn btn-primary btn-expand" href="#">Full width Button</a>
+```
+*/
+
+.btn {
+  @include btn();
+}
+
+.btn-primary{
+  @include paint(background, $brand-primary);
+  &:hover {
+    @include paint(background, lighten($brand-primary, 10%));
+  }
+}
+.btn-secondary{
+  @include paint(background, $brand-secondary);
+  &:hover {
+    @include paint(background, lighten($brand-secondary, 10%));
+  }
+}
+.btn-info{
+  @include paint(background, $brand-info);
+  &:hover {
+    @include paint(background, lighten($brand-info, 10%));
+  }
+}
+.btn-warning{
+  @include paint(background, $brand-warning);
+  &:hover {
+    @include paint(background, lighten($brand-warning, 10%));
+  }
+}
+.btn-success{
+  @include paint(background, $brand-success);
+  &:hover {
+    @include paint(background, lighten($brand-success, 10%));
+  }
+}
+.btn-alert{
+  @include paint(background, $brand-alert);
+  &:hover {
+    @include paint(background, lighten($brand-alert, 10%));
+  }
+}
+
+
+@include btn-sizes($button-size-variations, small);
+@include btn-sizes($button-size-variations, medium);
+@include btn-sizes($button-size-variations, large);
+@include btn-sizes($button-size-variations, expand);
