--- a/scss/molecules/switches/_switches.scss
+++ b/scss/molecules/switches/_switches.scss
@@ -48,11 +48,11 @@ For on off states
 .tgl-flat{
   + .tgl-btn{
     padding: 2px;
-    transition: all .2s ease;
+    @include transition-effect();
     background: #fff;
     border: 4px solid #e74c3c;
     &:after{
-      transition: all .2s ease;
+      @include transition-effect();
       background: #e74c3c;
     }
   }
